--- a/src/pages/exExos/OneExercice.module.scss
+++ b/src/pages/exExos/OneExercice.module.scss
@@ -1,9 +1,10 @@
-.teamCard {
+.exerciceCard {
   width: 300px;
   height: 300px;
   border-radius: 5px;
   margin: 20px;
-  .team {
+  background-color: var(--primary);
+  .exercice {
     font-size: 20px;
     margin: 10px;
   }
