--- a/src/pages/exRecette/OneRecette.module.scss
+++ b/src/pages/exRecette/OneRecette.module.scss
@@ -1,9 +1,11 @@
-.teamCard {
-  width: 300px;
-  height: 300px;
+.recetteCard {
+  width: 400px;
+  height: 650px;
   border-radius: 5px;
   margin: 20px;
-  .team {
+  color: white;
+  background-color: var(--secondary);
+  .recette {
     font-size: 20px;
     margin: 10px;
   }
