--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -29,3 +29,15 @@
   align-items: center;
   justify-content: center;
 }
+.justify-content-end {
+  justify-content: end;
+}
+.justify-content-start {
+  justify-content: start;
+}
+.align-items-end {
+  align-items: end;
+}
+.align-items-start {
+  align-items: start;
+}
