--- a/src/compenants/Header/Header.module.scss
+++ b/src/compenants/Header/Header.module.scss
@@ -17,6 +17,7 @@ header {
     border-top-left-radius: 1000px;
     background-color: var(--primary);
     padding-left: 2.5%;
+    height: 100%;
   }
   h3 {
     color: var(--secondary);
