--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,24 +1,21 @@
-header {
+@use "../../assets/styles/mixins" as mixin;
+
+.header {
   color: white;
-  background-color: var(--secondary);
+  background-color: var(--primary);
   position: relative;
   width: 100%;
-  height: 70px;
   margin: 0 auto;
-  .nav1 {
+  .nav {
     background-color: var(--primary);
-    margin-right: 15%;
     justify-content: start;
     height: 100%;
-    border-top-right-radius: 1000px;
+    
+  
+   
   }
 
-  .nav2 {
-    border-top-left-radius: 1000px;
-    background-color: var(--primary);
-    padding-left: 2.5%;
-    height: 100%;
-  }
+  
   h3 {
     color: var(--secondary);
   }
@@ -28,5 +25,36 @@ header {
   .logo {
     height: 70.4px;
     width: 100px;
-  }
+    @include mixin.xs{
+      height: 50px;
+      width: 75px;
+      margin-right: 30px;
+    }
+
+  
+  }  .burgerMenu {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      a {
+        text-decoration: none;
+        margin-right: 30px;
+      }
+      @include mixin.sm-lt {
+        display: none;
+      }
+    }
+    .mobileHeader {
+      font-size: 2.2rem;
+      display: none;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.8;
+      }
+      @include mixin.sm-lt {
+        display: block;
+        font-size: 1.8rem;
+      }}
+  
 }
