--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -6,17 +6,8 @@ main {
   justify-content: start;
   width: 100%;
   margin: 0 auto;
-  min-height: 100vh;
-
-  h3 {
-    margin-left: 10%;
-  }
-  p {
-    margin: 5%;
-  }
-  .image {
-    height: 500px;
-    width: 100%;
-    object-fit: cover;
+  background-color: #f5f5f5;
+  .filter {
+    margin: 10px;
   }
 }
