--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,6 +5,28 @@ footer {
   background-color: var(--primary);
   position: relative;
   width: 100%;
-  height: 70px;
+  height: auto;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  @include mixin.xs {
+    flex-direction: column;
+  }
+  a {
+    color: white;
+  }
+
+  .logo {
+    height: 100px;
+    width: 200px;
+    @include mixin.xs {
+      height: 70px;
+      width: 100px;
+    }
+  }
+  l1 {
+    margin-bottom: 10px;
+  }
 }
